@@ -14,6 +14,8 @@ chpst \- runs a program with a changed process state
 .IR dir ]
 [\-/
 .IR root ]
+[\-C
+.IR pwd ]
 [\-n
 .IR inc ]
 [-l|-L
