@@ -1,3 +1,5 @@
+  * chpst.c, man/chpst.8: add -C option to change working directory (thx
+    Andrew J. Hesford, void linux).
   * doc/install.html: add link to sha256sum.
   * doc/install.html, doc/replaceinit.html: change mail address.
   * package/TODO: remove.
